# serializer version: 1
# name: test_load_and_dump[deserialized]
  test_load_and_dump.<locals>.Person(name='John Doe', age=30, address=test_load_and_dump.<locals>.Address(street='123 Main St', city='Anytown'))
# ---
# name: test_load_and_dump[serialized]
  '''
  {
    "__class__": "Person",
    "name": "John Doe",
    "age": 30,
    "address": {
      "__class__": "Address",
      "street": "123 Main St",
      "city": "Anytown"
    }
  }
  '''
# ---
# name: test_load_and_dump_mixed_type[serialized]
  '''
  [
    {
      "__class__": "AVStream",
      "node": {
        "__class__": "InputNode",
        "kwargs": {},
        "inputs": [],
        "filename": "input.mp4"
      },
      "index": null
    },
    true
  ]
  '''
# ---
# name: test_load_and_dump_on_complex_filter[serialized]
  '''
  {
    "__class__": "OutputStream",
    "node": {
      "__class__": "OutputNode",
      "kwargs": {},
      "inputs": [
        {
          "__class__": "VideoStream",
          "node": {
            "__class__": "FilterNode",
            "kwargs": {
              "x": "50",
              "y": "50",
              "width": "120",
              "height": "120",
              "color": "red",
              "thickness": "5"
            },
            "inputs": [
              {
                "__class__": "VideoStream",
                "node": {
                  "__class__": "FilterNode",
                  "kwargs": {},
                  "inputs": [
                    {
                      "__class__": "VideoStream",
                      "node": {
                        "__class__": "FilterNode",
                        "kwargs": {
                          "n": 2
                        },
                        "inputs": [
                          {
                            "__class__": "VideoStream",
                            "node": {
                              "__class__": "FilterNode",
                              "kwargs": {
                                "start_frame": 10,
                                "end_frame": 20
                              },
                              "inputs": [
                                {
                                  "__class__": "AVStream",
                                  "node": {
                                    "__class__": "InputNode",
                                    "kwargs": {},
                                    "inputs": [],
                                    "filename": "input.mp4"
                                  },
                                  "index": null
                                }
                              ],
                              "name": "trim",
                              "input_typings": [
                                {
                                  "__class__": "StreamType",
                                  "value": "video"
                                }
                              ],
                              "output_typings": [
                                {
                                  "__class__": "StreamType",
                                  "value": "video"
                                }
                              ]
                            },
                            "index": 0
                          },
                          {
                            "__class__": "VideoStream",
                            "node": {
                              "__class__": "FilterNode",
                              "kwargs": {
                                "start_frame": 30,
                                "end_frame": 40
                              },
                              "inputs": [
                                {
                                  "__class__": "AVStream",
                                  "node": {
                                    "__class__": "InputNode",
                                    "kwargs": {},
                                    "inputs": [],
                                    "filename": "input.mp4"
                                  },
                                  "index": null
                                }
                              ],
                              "name": "trim",
                              "input_typings": [
                                {
                                  "__class__": "StreamType",
                                  "value": "video"
                                }
                              ],
                              "output_typings": [
                                {
                                  "__class__": "StreamType",
                                  "value": "video"
                                }
                              ]
                            },
                            "index": 0
                          }
                        ],
                        "name": "concat",
                        "input_typings": [
                          {
                            "__class__": "StreamType",
                            "value": "video"
                          },
                          {
                            "__class__": "StreamType",
                            "value": "video"
                          }
                        ],
                        "output_typings": [
                          {
                            "__class__": "StreamType",
                            "value": "video"
                          }
                        ]
                      },
                      "index": 0
                    },
                    {
                      "__class__": "VideoStream",
                      "node": {
                        "__class__": "FilterNode",
                        "kwargs": {},
                        "inputs": [
                          {
                            "__class__": "AVStream",
                            "node": {
                              "__class__": "InputNode",
                              "kwargs": {},
                              "inputs": [],
                              "filename": "overlay.png"
                            },
                            "index": null
                          }
                        ],
                        "name": "hflip",
                        "input_typings": [
                          {
                            "__class__": "StreamType",
                            "value": "video"
                          }
                        ],
                        "output_typings": [
                          {
                            "__class__": "StreamType",
                            "value": "video"
                          }
                        ]
                      },
                      "index": 0
                    }
                  ],
                  "name": "overlay",
                  "input_typings": [
                    {
                      "__class__": "StreamType",
                      "value": "video"
                    },
                    {
                      "__class__": "StreamType",
                      "value": "video"
                    }
                  ],
                  "output_typings": [
                    {
                      "__class__": "StreamType",
                      "value": "video"
                    }
                  ]
                },
                "index": 0
              }
            ],
            "name": "drawbox",
            "input_typings": [
              {
                "__class__": "StreamType",
                "value": "video"
              }
            ],
            "output_typings": [
              {
                "__class__": "StreamType",
                "value": "video"
              }
            ]
          },
          "index": 0
        }
      ],
      "filename": "out.mp4"
    },
    "index": null
  }
  '''
# ---
# name: test_load_and_dump_on_duplicate_input[cmd_1]
  'ffmpeg -i input.mp4 -map 0 -map 0 out.mp4'
# ---
